[package]
name = "simple-shunting"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Albert Hu<lightmorning46@gmail.com>"]
description = "A simplified shunting library for evaluating math expressions in cosmwasm"
repository = "https://github.com/cowboy0015/tox/tree/master/shunting"
readme = "README.md"
keywords = ["shunting", "math", "parser", "expression", "eval"]
categories = ["parsing", "algorithms"]

[dependencies]
lexers = { version = "0.1", path = "../lexers" }
libm = "0.2"

[dev-dependencies]
home = "0.5"
rustyline = "9.1"
